2005-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicationTrustTest.cs: New. Unit tests for ApplicationTrust (2.0).

2005-04-25  Sebastien Pouliot  <sebastien@ximian.com>

	* FileCodeGroupTest.cs: Revoved tests for Scope property (2.0).
	* GacMembershipConditionTest.cs: Renamed Gac to GacInstalled (new name
	* GacTest.cs: Renamed Gac to GacInstalled (new name in beta2).
	in beta2).
	* IBuiltInEvidenceTest.cs: Renamed Gac to GacInstalled (new name in 
	beta2).
	* SiteTest.cs: Removed [Catogery("NotWorking")] from some 2.0 tests.
	* UrlTest.cs: Removed [Catogery("NotWorking")] from some 2.0 tests.
	* UrlMembershipConditionTest.cs: Removed [Catogery("NotWorking")] from
	some 2.0 tests.

2005-03-18  Sebastien Pouliot  <sebastien@ximian.com>

	* PolicyLevelTest.cs: Remove non-corlib permission classes from the 
	policy XML string as this can fail for "make distcheck".

2005-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* PolicyLevelTest.cs: Renamed the file created by the StoreLocation 
	test case to include the username. This way multiple users sharing
	/tmp cannot block the test execution (e.g. buildbot). Also tries to
	remove the file after the test.

2005-01-31  Sebastien Pouliot  <sebastien@ximian.com>

	* HashTest.cs: Oops, changed "NotWorking" to "NotDotNet".

2005-01-30  Sebastien Pouliot  <sebastien@ximian.com>

	* HashTest.cs: Changed [Ignore] to [Category("NotWorking")] to reduce
	nunit logs.

2005-01-10  Sebastien Pouliot  <sebastien@ximian.com>

	* PolicyLevelTest.cs: Removed [Ignore] from tests as they now execute
	properly on 2.0. For 1.x the tests are added to the NotDotNet category.

2004-09-19  Alexis Christoforides <alexis@thenull.net>

	* UnionCodeGroupTest.cs: Added ResolveWithChildren test.

2004-09-01  Sebastien Pouliot  <sebastien@ximian.com>

	* HashTest.cs: Fixed tests so they execute without errors on both
	Fx 1.1 and Fx 2.0 (beta 1).
	* PublisherTest.cs: Fixed tests so they execute without errors on both